# gwhisper

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: gwhisper.glade  main.rs  worker.rs
lib/: Cargo.toml
lib/src/: lib.rs  recogntion.rs  recording.rs
src/: main.rs  recognition.rs  recogntion.rs  recording.rs
