[package]
name = "gwhisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
cpal = "0.15.0"
ctrlc = "3.4.0"
whisper-rs = "0.8.0"
