[package]
name = "gwhisper-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
cpal = "0.15.0"
derive-new = "0.5.9"
gtk = "0.17.0"
gwhisper = { path = "../lib" }
