[package]
name = "gwhisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
cpal = "0.15.0"
derivative = "2.2.0"
derive-error = "0.0.5"
derive-new = "0.5.9"
log = "0.4.20"
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs", branch = "master" }

[features]
cuda = ["whisper-rs/cuda"]
opencl = ["whisper-rs/opencl"]
